manifest/deployment_nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtool
  namespace: volume2
  labels:
    app: mtool
spec:
  selector:
    matchLabels:
      app: mtool
  replicas: 1
  template:
    metadata:
      labels:
        app: mtool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nfs-storage
          mountPath: "/data"
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-pvc
